// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RacingTaskSolver 2017-07-17-lev 1`] = `
"
IGP	  104	  14:50:57	  136.1 km	   75.47 km/h
1G	  101	  14:54:34	  136.1 km	   70.21 km/h
P9	  104	  14:51:22	  136.1 km	   68.84 km/h
MI	  104	  14:51:15	  136.1 km	   68.25 km/h
999	  100	  14:51:52	  136.1 km	   64.49 km/h
LC	  104	  14:53:46	  136.1 km	   66.53 km/h
MS	   98	  14:52:13	  136.1 km	   61.85 km/h
E1	  104	  14:50:58	  136.1 km	   65.60 km/h
1R	  104	  14:52:58	  136.1 km	   65.22 km/h
SW	   98	  14:52:26	  136.1 km	   61.27 km/h
1	  101	  14:47:05	  136.1 km	   62.91 km/h
FR	   98	  14:51:34	  136.1 km	   60.77 km/h
H1	  105	  14:53:02	  136.1 km	   64.75 km/h
EI	  107	  14:51:15	  136.1 km	   65.77 km/h
sq	  107	  14:53:01	  136.1 km	   63.37 km/h
JM	  101	  14:56:52	  136.1 km	   59.36 km/h
XN	   98	  14:51:30	  136.1 km	   57.03 km/h
T1	  104	  15:06:25	  136.1 km	   59.18 km/h
WJ	  104	  15:06:22	  136.1 km	   54.19 km/h
33	   98	  14:51:16	  103.6 km	             
ZG	  104	  14:06:55	   94.2 km	             
"
`;

exports[`RacingTaskSolver 2017-07-17-lev until 2017-07-17T16:39:00Z 1`] = `
"
IGP	  104	  14:17:09	  135.6 km	             
1G	  101	  14:45:24	  118.1 km	             
MI	  104	  14:51:15	  119.2 km	             
P9	  104	  14:19:11	  118.8 km	             
1	  101	  14:39:53	  110.3 km	             
XN	   98	  14:51:30	  106.3 km	             
999	  100	  14:51:52	  108.0 km	             
MS	   98	  13:55:53	  105.1 km	             
E1	  104	  14:50:58	  110.8 km	             
LC	  104	  14:18:18	  110.3 km	             
33	   98	  14:51:16	  103.6 km	             
1R	  104	  14:45:22	  109.6 km	             
EI	  107	  14:27:02	  110.9 km	             
H1	  105	  14:45:31	  108.7 km	             
SW	   98	  13:59:06	  100.9 km	             
JM	  101	  14:56:52	  103.1 km	             
FR	   98	  14:46:35	   99.8 km	             
sq	  107	  14:00:07	  106.2 km	             
WJ	  104	  14:48:16	   90.6 km	             
T1	  104	  14:48:31	   90.4 km	             
ZG	  104	  14:06:55	   78.0 km	             
"
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" can handle outlandings 1`] = `
Object {
  "completed": false,
  "distance": 94170.212,
  "path": Array [
    StartEvent {
      "point": lon 6.9179704 lat 51.1276447,
      "time": 2017-07-17T14:06:54.931Z,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": lon 6.2812555 lat 50.9890756,
      "time": 2017-07-17T15:42:59.779Z,
      "type": "turn",
    },
    TurnEvent {
      "num": 2,
      "point": lon 6.1937554 lat 51.1722784,
      "time": 2017-07-17T16:21:04.919Z,
      "type": "turn",
    },
  ],
  "speed": undefined,
  "time": undefined,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns a result 1`] = `
Object {
  "completed": true,
  "distance": 136145.27,
  "path": Array [
    StartEvent {
      "point": lon 6.9313498 lat 51.0847306,
      "time": 2017-07-17T14:50:56.825Z,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": lon 6.2829181 lat 50.9964654,
      "time": 2017-07-17T15:24:26.380Z,
      "type": "turn",
    },
    TurnEvent {
      "num": 2,
      "point": lon 6.1941852 lat 51.1723459,
      "time": 2017-07-17T15:51:51.555Z,
      "type": "turn",
    },
    TurnEvent {
      "num": 3,
      "point": lon 6.6075025 lat 50.9694879,
      "time": 2017-07-17T16:20:04.143Z,
      "type": "turn",
    },
    FinishEvent {
      "point": lon 7.0084235 lat 51.0985126,
      "time": 2017-07-17T16:39:10.837Z,
      "type": "finish",
    },
  ],
  "speed": 75.473058,
  "time": 6494.0122,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns an intermediate result 1`] = `
Object {
  "completed": false,
  "distance": 52613.082,
  "path": Array [
    StartEvent {
      "point": lon 6.9147855 lat 51.1378604,
      "time": 2017-07-17T14:17:08.833Z,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": lon 6.2829181 lat 50.9964654,
      "time": 2017-07-17T15:24:26.380Z,
      "type": "turn",
    },
  ],
  "speed": undefined,
  "time": undefined,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns an intermediate result 2`] = `
Object {
  "completed": true,
  "distance": 136145.27,
  "path": Array [
    StartEvent {
      "point": lon 6.9313498 lat 51.0847306,
      "time": 2017-07-17T14:50:56.825Z,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": lon 6.2829181 lat 50.9964654,
      "time": 2017-07-17T15:24:26.380Z,
      "type": "turn",
    },
    TurnEvent {
      "num": 2,
      "point": lon 6.1941852 lat 51.1723459,
      "time": 2017-07-17T15:51:51.555Z,
      "type": "turn",
    },
    TurnEvent {
      "num": 3,
      "point": lon 6.6075025 lat 50.9694879,
      "time": 2017-07-17T16:20:04.143Z,
      "type": "turn",
    },
    FinishEvent {
      "point": lon 7.0084235 lat 51.0985126,
      "time": 2017-07-17T16:39:10.837Z,
      "type": "finish",
    },
  ],
  "speed": 75.473058,
  "time": 6494.0122,
}
`;
